--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,10 @@
+spring.datasource.url=jdbc:mysql://localhost:3306/game_manager_db
 spring.datasource.username=root
 spring.datasource.password=
-spring.datasource.url=jdbc:mysql://localhost:3306/game_manager_db
+
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
 spring.security.user.name=admin
-spring.security.user.password=secret
+spring.security.user.password=12345678
