--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.datasource.url=jdbc:mariadb://localhost:3306/game_manager_db
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=root
 
-spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
 
 server.error.include-stacktrace=never
 server.error.include-path=never
